# prompthub-api

./: .gitignore  Cargo.toml  README.md
migrations/: 001_create_prompts.sql
src/: main.rs
